[B]0.1.2[/B]
- added basic cookie handling, enabling reuse of http session id's (JSESSIONID)

[B]0.1.1[/B]
- initial working version!